--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
                 <div class="tieu-de-nho">Kinh nghiệm của tôi</div>
                 <div class="mo-ta">Tôi đã làm việc trong lĩnh vực quản lý dự án được 5 năm. Tôi đã giúp nhiều công ty hoàn thành dự án đúng hạn và tiết kiệm chi phí.</div>
                 
-                <div class="tieu-de-nho">Kỹ năng</div>
+                <div class="tieu-de-nho">Sở thích</div>
                 <ul class="ky-nang">
-                    <li>Quản lý dự án</li>
-                    <li>Làm việc nhóm</li>
-                    <li>Giao tiếp tốt</li>
-                    <li>Giải quyết vấn đề</li>
+                    <li>Ăn cháo đá bát</li>
+                    <li>Ăn quả nhớ em</li>
+                    <li>Ngủ</li>
+                    <li>Ngux7</li>
                 </ul>
             </div>
             
