--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <li>📞 Điện thoại: 0123-456-789</li>
                     <li>📧 Email: huynhngo289@gmail.com</li>
                     <li>📍 Địa chỉ: Hue, Viet Nam</li>
-                    <li>💼 LinkedIn: linkedin.com/in/huinh</li>
+                    <li href="https://www.facebook.com/huynh.ngo.33671">💼 LinkedIn: linkedin.com/in/huinh</li>
                 </ul>
             </div>
             
